# timeblok

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cargo-pub.sh  py-pub.sh  release.sh  wsm-pub.sh
src/: args.rs  blok.pest  converter.rs  environment.rs  filter.rs  importer.rs  ir.rs  lib.rs  main.rs  output.rs  parser.rs  preset.rs  resolver.rs
src/ir/: command.rs  filter.rs  ident.rs  mod.rs
src/preset/: mod.rs  workalendar.rs
src/utils/: mod.rs
timeblok-ai/: chat.py  gen_prompt.py  prompt.json  prompt.md  railway.json  readme.md  requirements.txt  server.py
timeblok-ai/examples/: basic.md  filts.md
timeblok-c/: cli.rs
timeblok-compiler/: Cargo.toml
timeblok-compiler/cli/: Cargo.toml
timeblok-compiler/cli/src/: args.rs  cli.rs  main.rs
timeblok-compiler/src/: blok.pest  converter.rs  environment.rs  importer.rs  lib.rs  output.rs  parser.rs  resolver.rs
timeblok-compiler/src/ir/: command.rs  displays.rs  filter.rs  ident.rs  mod.rs
timeblok-compiler/src/preset/: mod.rs  workalendar.rs
timeblok-compiler/src/tests/: tests.rs
timeblok-compiler/src/tests/bloks/: notes.tb
timeblok-compiler/src/tests/snapshots/: timeblok__tests__tests__filters.snap  timeblok__tests__tests__run_tests@filter_dow.tb.snap  timeblok__tests__tests__run_tests@filter_workday.tb.snap  timeblok__tests__tests__run_tests@notes.tb.snap  timeblok__tests__tests__run_tests@sanity.tb.snap  timeblok__tests__tests__run_tests@semester.tb.snap  timeblok__tests__tests__run_tests@todos.tb.snap  timeblok__tests__tests__sanity.snap
timeblok-compiler/src/tests/wsm-bloks/: filter_dow.tb  filter_workday.tb  sanity.tb  semester.tb  todos.tb
timeblok-compiler/src/utils/: mod.rs
timeblok-compiler/timeblok-cli/: tmp-deps.txt
timeblok-js/: Cargo.toml  package-lock.json  package.json
timeblok-js/src/: lib.rs
timeblok-py/: Cargo.toml  pyproject.toml
timeblok-py/src/: lib.rs
tst/: tst.txt
web/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vercel.json  vite.config.ts
web/src/: App.tsx
