[package]
name = "timeblok-js"
description = "WASM bindings for Timeblok"

edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
timeblok = {path="../timeblok-compiler", package="timeblok"}
wasm-bindgen = "0.2.84"