[package]
name = "timeblok-js"
description = "WASM bindings for Timeblok"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
timeblok = {path="../timeblok-compiler", package="timeblok", version="0.4.3"}
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.1", optional = true }
wasm-bindgen-test = "0.3.34"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
