[package]
name = "timeblok-cli"
description = "A CLI for timeblok"

edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "timeblok"
path = "src/main.rs"

[target.'cfg(not(target_family="wasm"))'.dependencies]
clap = { version = "4.0.32", features = ["derive"] }
edit = "0.1.4"
timeblok = {path="..", package="timeblok", version="0.3.4"}
open = "4.0.1"
anyhow = "1.0.70"
directories = "5.0.0"
chrono = "0.4.24"

[target.'cfg(not(target_family="wasm"))'.bin]
name = "timeblok"
path = "src/main.rs"